# pastly

./: .gitattributes  README.md  biome.json  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/instructions/: default.instructions.md
.github/workflows/: release-dry-run.yml  release.yml
tauri/: Cargo.toml  info.plist  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
tauri/capabilities/: default.json
tauri/icons/: icon.icns
tauri/migrations/: 001_migrate_images.sql
tauri/src/: crypto.rs  db.rs  main.rs  sync.rs
ui/: index.html  input.css  output.css  package.json
ui/src/: app.tsx  consts.ts  global.d.ts  ipc.ts  main.tsx  types.ts
ui/src/atom/: clip-items.ts  devices.ts  language.ts  primitive.ts  server.ts  settings.ts  theme.ts
ui/src/components/: alert-dialog.tsx  count-up.tsx  date-picker.tsx  hover-tip.tsx  index.ts  input-number.tsx  multi-select.tsx  one-alert-dialog.tsx  pin-input.tsx  search-input.tsx  simple-form.tsx  tooltip-button.tsx  virtual-list.tsx
ui/src/components/shadcn/: alert-dialog.tsx  badge.tsx  calendar.tsx  command.tsx  dialog.tsx  input.tsx  popover.tsx  separator.tsx  switch.tsx  textarea.tsx  tooltip.tsx
ui/src/hooks/: index.ts  use-async-effect.ts  use-once-effect.ts  use-t.ts
ui/src/i18n/: en.ts  index.ts  zh.ts
ui/src/utils/: cn.ts  common.ts  db.ts  event-emitter.ts  storage.ts  tray.ts  window.ts
ui/src/views/: app-header.tsx  devices.tsx  header.tsx  item.tsx  list.tsx  settings.tsx  theme-toggle.tsx
