[package]
name = "pastly"
version = "0.1.0"
edition = "2024"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "Purely local clipboard manager on macOS"
repository = "https://github.com/shixinhuang99/pastly"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.98"
hostname = "0.4.1"
local-ip-address = "0.6.3"
mdns-sd = "0.13.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.4.1", features = ["tray-icon"] }
tauri-plugin-autostart = "2.3.0"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-opener = "2.2.6"
tauri-plugin-single-instance = "2.2.3"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }
