[package]
name = "pastly"
version = "1.0.0"
edition = "2024"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "Clipboard manager synced across devices via local network"
repository = "https://github.com/shixinhuang99/pastly"
license = "MIT"
publish = false

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
axum = { version = "0.8.3", default-features = false, features = [
  "http1",
  "json",
  "tokio",
] }
base64 = "0.22.1"
hex = "0.4.3"
hostname = "0.4.1"
local-ip-address = "0.6.3"
mdns-sd = "0.13.7"
pbkdf2 = "0.12.2"
reqwest = { version = "0.12.15", default-features = false, features = [
  "charset",
  "macos-system-configuration",
  "json",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
tauri = { version = "=2.4.1", features = ["tray-icon", "linux-libxdo"] }
tauri-plugin-autostart = "2.3.0"
tauri-plugin-clipboard = "2.1.11"
tauri-plugin-opener = "2.2.6"
tauri-plugin-single-instance = "2.2.3"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tokio = { version = "1.44.2", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "sync",
] }

[build-dependencies]
tauri-build = { version = "=2.1.1", features = [] }
